--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Linhui (Charlie) Dai"
 title_separator          : "-"
 name                     : &name "Linhui (Charlie Dai)"
-description              : &description "My academic page."
+description              : &description "Master of Applied Science student at McMaster University."
 url                      : https://charlie0215.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Charlie0215/charlie0215.github.io"
