--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Linhui (Charlie) Dai"
   avatar           : "profile.png"
-  bio              : "Research student at McMaster Univerity with research interest centers on Deep Learning, Low-Level Vision, and Image Matting."
-  location         : "1280 main st west, Hamilton, ON, Canada"
+  bio              : "Research student at McMaster Univerity with research interest centers on deep learning, low-level Vision, classification, and matting."
+  location         : "1280 Main St West, Hamilton, ON, Canada"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "http://yourfullgooglescholarurl.com"
