--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Linhui (Charlie) Dai"
   avatar           : "profile.png"
   bio              : "Research student at McMaster Univerity with research interest centers on deep learning, low-level Vision, classification, and matting."
-  location         : "1280 Main St West, Hamilton, ON, Canada"
+  location         : "1280 Main St West, Hamilton \n ON, Canada"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "http://yourfullgooglescholarurl.com"
