--- a/_config.yml
+++ b/_config.yml
@@ -83,10 +83,10 @@ author:
   name             : "Linhui (Charlie) Dai"
   avatar           : "profile.png"
   bio              : "Research student at McMaster Univerity with research interest centers on deep learning, low-level Vision, classification, and matting."
-  location         : "1280 Main St West, Hamilton \n ON, Canada"
+  location         : "1280 Main St West, Hamilton"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  pubmed           : 
+  googlescholar    : 
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
@@ -94,12 +94,12 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         :
+  facebook         : "facebook.com/dai.charlie.5"
   foursquare       :
   github           : "https://github.com/Charlie0215"
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        : 
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "www.linkedin.com/in/charlie-linhui-dai-978359125"
