--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
+theme: minimal-mistakes-jekyll
 locale                   : "en-US"
 title                    : "Linhui (Charlie) Dai"
 title_separator          : "-"
@@ -113,7 +114,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          :
+  youtube          : 
   wikipedia        :
 
 
