--- a/_config.yml
+++ b/_config.yml
@@ -95,15 +95,15 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "facebook.com/dai.charlie.5"
+  facebook         : "dai.charlie.5"
   foursquare       :
-  github           : "https://github.com/Charlie0215"
+  github           : "Charlie0215"
   google_plus      :
   keybase          :
   instagram        : 
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/charlie-linhui-dai-978359125/"
+  linkedin         : "charlie-linhui-dai-978359125/"
   orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
