--- a/_config.yml
+++ b/_config.yml
@@ -95,9 +95,9 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "dai.charlie.5"
+  facebook         : "dai.charlie.5/"
   foursquare       :
-  github           : "Charlie0215"
+  github           : "Charlie0215/"
   google_plus      :
   keybase          :
   instagram        : 
