--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/dai.charlie.5"
+  facebook         : "https://dai.charlie.5"
   foursquare       :
   github           : "Charlie0215/"
   google_plus      :
