--- a/_config.yml
+++ b/_config.yml
@@ -95,19 +95,19 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/dai.charlie.5/"
+  facebook         : https://www.facebook.com/dai.charlie.5/
   foursquare       :
-  github           : "Charlie0215/"
+  github           : Charlie0215/
   google_plus      :
   keybase          :
   instagram        : 
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "charlie-linhui-dai-978359125/"
+  linkedin         : charlie-linhui-dai-978359125/
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
-  stackoverflow    : http://stackoverflow.com/users/123456/username
+  stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
   twitter          : "replacethistwitterhandle"
