--- a/_config.yml
+++ b/_config.yml
@@ -116,6 +116,7 @@ author:
   xing             :
   youtube          : 
   wikipedia        :
+  wechat           : "www.baidu.com"
 
 
 # Reading Files
