--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,9 @@ main:
   - title: "Experience"
     url: /Experience/
 
+  - title: "Achievements"
+    url: /Achievements/
+
   # - title: "Talks"
   #   url: /talks/    
 
@@ -22,8 +25,8 @@ main:
   # - title: "Blog Posts"
   #   url: /year-archive/
     
-  # - title: "CV"
-  #   url: /cv/
+  - title: "CV"
+    url: /cv/
     
   # - title: "Guide"
   #   url: /markdown/
