--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Linhui (Charlie) Dai"
-  avatar           : "profile.png"
+  avatar           : "WechatIMG87.jpeg"
   bio              : "Research student at McMaster Univerity with research interest centers on deep learning, low-level Vision, classification, and matting."
   location         : "Canada"
   employer         :
