--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,10 +1,10 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
+  name        : "Linhui Dai"
+  uri         : "https://charlie0215.github.io/news/"
+  email       : "dail5@mcmaster.ca"
+  bio         : "Research student at McMaster University"
   avatar      : "bio-photo-2.jpg"
   twitter     : "name"
   google_plus : "Name"
