--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : "Linhui (Charlie) Dai"
   avatar           : "profile.png"
-  bio              : "Research student at McMaster Univerity with research interest centers on deep learning, low-level Vision, classification, and matting."
+  bio              : "Research student at McMaster Univerity with research interest centers on deep learning, low-level vision, classification, and matting."
   location         : "Canada"
   employer         :
   pubmed           : 
